# TestCabinet

./: .env.example  cabinet_data.json  pyproject.toml
cabinet/: admin.py  apps.py  models.py  urls.py  views.py
cabinet/migrations/: 0001_initial.py  0002_alter_news_picture.py  0003_contract.py  0004_alter_contract_owner_finance.py  0005_database.py
cabinet/templates/cabinet/: base.html  database_form.html  database_list.html  finance_list.html  news_list.html
cabinet/templates/cabinet/includes/: inc_left_block.html
config/: settings.py  urls.py
static/css/: style_cabinet.css  style_db.css  style_fin.css  style_login.css  style_registr.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py
users/templates/users/: login_form.html  registr_form.html  show_login_password.html
